# phoebe-server

./: .gitignore  README.md  api.py  docker-compose.yml  flake.nix  insert_mock.py  known_flags.json  main.py  pyproject.toml  result  sessions.py  user_views.py  view_levels.py
api/: __init__.py  assets.py  chat.py  groups.py  houses.py  me.py  search.py  users.py
db/: __init__.py  consts.py  geospatial.py  models.py
tests/: giga.hurl  run
utils/: assetutil.py  colors.py
viewlevels/: group.py  house.py  user.py
